added cors middleware to the server

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-set": "^1.0.1",
     "clownface": "^1.0.0",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "hydra-box": "^0.5.1",
